objects/Candidate_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Source_Notes__c</fullName>
        <label>Source Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Career Fair</fullName>
                </value>
                <value>
                    <fullName>CraigsList</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Glassdoor</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Mogul</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Premier Marketing Blast</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>University Job Board</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>ZipRecruiter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Created_Date__c</fullName>
        <formula>Candidate__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name__c</fullName>
        <formula>Candidate__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Pass_Notes__c</fullName>
        <label>Candidate Pass Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Registrations</relationshipLabel>
        <relationshipName>Candidate_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Other&quot;),&quot;Other; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Administrative&quot;),&quot;Administrative; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Human Resources&quot;),&quot;Human Resources; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Marketing/PR&quot;),&quot;Marketing/PR; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Accounting/Finance&quot;),&quot;Accounting/Finance; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Operations&quot;),&quot;Operations; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Categories_NEW__c,&quot;Sales&quot;),&quot;Sales; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Screening_Interview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Screening Interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Day_of_Week__c</fullName>
        <formula>CASE( MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <label>Created Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>On Unemployment</fullName>
                </value>
                <value>
                    <fullName>On Premier Assignment</fullName>
                </value>
                <value>
                    <fullName>Placed by Premier</fullName>
                </value>
                <value>
                    <fullName>Contracting w/ other Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Status_formulafield__c</fullName>
        <formula>TEXT (Candidate__r.Employment_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Education_Completed__c</fullName>
        <formula>TEXT (Candidate__r.Highest_Education_Completed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Education Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.ts2__Job_Type__c,&quot;Temporary/ Contract&quot;),&quot;Temporary/ Contract; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.ts2__Job_Type__c,&quot;Contract to Hire&quot;),&quot;Contract to Hire; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.ts2__Job_Type__c,&quot;Direct Hire&quot;),&quot;Direct Hire; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Languages__c,&quot;NONE&quot;),&quot;NONE; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Arabic&quot;),&quot;Arabic; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Bengali&quot;),&quot;Bengali; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Cantonese&quot;),&quot;Cantonese; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Dutch/Africaans&quot;),&quot;Dutch/Africaans; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Languages__c,&quot;English&quot;),&quot;English; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Farsi (Persian)&quot;),&quot;Farsi (Persian); &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;French&quot;),&quot;French; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;German&quot;),&quot;German; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Hindustani (Hindu/Urdu)&quot;),&quot;Hindustani (Hindu/Urdu); &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Languages__c,&quot;Italian&quot;),&quot;Italian; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Japanese&quot;),&quot;Japanese; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Javanese&quot;),&quot;Javanese; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Korean&quot;),&quot;Korean; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Malay&quot;),&quot;Malay; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Languages__c,&quot;Mandarin&quot;),&quot;Mandarin; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Polish&quot;),&quot;Polish; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Portuguese&quot;),&quot;Portuguese; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Punjabi&quot;),&quot;Punjabi; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Russian&quot;),&quot;Russian; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Languages__c,&quot;Spanish&quot;),&quot;Spanish; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Swahili&quot;),&quot;Swahili; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Tagalog&quot;),&quot;Tagalog; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Tamil&quot;),&quot;Tamil; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Thai&quot;),&quot;Thai; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Languages__c,&quot;Turkish&quot;),&quot;Turkish; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Vietnamese&quot;),&quot;Vietnamese; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Languages__c,&quot;Other&quot;),&quot;Other; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Languages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Referred_By__c</fullName>
        <label>Referral</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Preference_1__c</fullName>
        <formula>TEXT (  Candidate__r.Registration_Location_Preference__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Preference #1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Preference_Details__c</fullName>
        <label>Location Preference Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Folsom</fullName>
                </value>
                <value>
                    <fullName>Rocklin</fullName>
                </value>
                <value>
                    <fullName>Roseville</fullName>
                </value>
                <value>
                    <fullName>Granite Bay</fullName>
                </value>
                <value>
                    <fullName>Citrus Heights</fullName>
                </value>
                <value>
                    <fullName>Carmichael</fullName>
                </value>
                <value>
                    <fullName>El Dorado Hills</fullName>
                </value>
                <value>
                    <fullName>Pocket-Greenhaven</fullName>
                </value>
                <value>
                    <fullName>Gold River</fullName>
                </value>
                <value>
                    <fullName>Davis</fullName>
                </value>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Emeryville</fullName>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>El Cerrito</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>Concord</fullName>
                </value>
                <value>
                    <fullName>Pleasant Hill</fullName>
                </value>
                <value>
                    <fullName>Walnut Creek</fullName>
                </value>
                <value>
                    <fullName>San Ramon</fullName>
                </value>
                <value>
                    <fullName>Lafayette</fullName>
                </value>
                <value>
                    <fullName>Pleasanton/Dublin</fullName>
                </value>
                <value>
                    <fullName>Livermore</fullName>
                </value>
                <value>
                    <fullName>San Leandro</fullName>
                </value>
                <value>
                    <fullName>Hayward</fullName>
                </value>
                <value>
                    <fullName>Fremont</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Milpitas</fullName>
                </value>
                <value>
                    <fullName>Campbell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NRN_Reason__c</fullName>
        <label>NRN Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Not_Right_Now__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No current job matches</fullName>
                </value>
                <value>
                    <fullName>Out of the area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Right_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Right Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_to_Other_Locations__c</fullName>
        <label>Open to Other Locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Location_Preference__c</fullName>
        <inlineHelpText>Only applicable for Candidates who has selected &quot;Other&quot; for location preference.</inlineHelpText>
        <label>Other Location Preference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_name__c</fullName>
        <formula>IF(NOT(ISBLANK(Owner:User.LastName)), Owner:User.FirstName + &quot; &quot; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Accounting_Finance__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Accounts Payable&quot;),&quot;Accounts Payable; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Accounts Receivable&quot;),&quot;Accounts Receivable; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Accounting Assistant&quot;),&quot;Accounting Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Accounting Manager&quot;),&quot;Accounting Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Analyst&quot;),&quot;Analyst; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Bookkeeper&quot;),&quot;Bookkeeper; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Client Services Associate&quot;),&quot;Client Services Associate; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Controller&quot;),&quot;Controller; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Positions__c,&quot;Finance Assistant&quot;),&quot;Finance Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Finance Manager&quot;),&quot;Finance Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Financial Analyst&quot;),&quot;Financial Analyst; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Fund Accountant&quot;),&quot;Fund Accountant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Payroll Assistant&quot;),&quot;Payroll Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Payroll Manager&quot;),&quot;Payroll Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Assistant&quot;),&quot;Sales Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Staff Accountant&quot;),&quot;Staff Accountant; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Accounting/Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Administrative__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Admin Assistant&quot;),&quot;Admin Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Chief of Staff&quot;),&quot;Chief of Staff; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Data Entry&quot;),&quot;Data Entry; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Executive Assistant&quot;),&quot;Executive Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;File Clerk&quot;),&quot;File Clerk; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Legal Assistant/Paralegal&quot;),&quot;Legal Assistant/Paralegal; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Office Assistant&quot;),&quot;Office Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Office Manager&quot;),&quot;Office Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Personal Assistant&quot;),&quot;Personal Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Property Assistant&quot;),&quot;Property Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Receptionist&quot;),&quot;Receptionist; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Administrative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_All__c</fullName>
        <description>Populated with value from PB</description>
        <label>Positions - All</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Positions_Events__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Assistant&quot;),&quot;Events Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Logistics Coordinator&quot;),&quot;Events Logistics Coordinator; &quot;,null)&amp;

IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Logistics Manager&quot;),&quot;Events Logistics Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Manager&quot;),&quot;Events Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Event Staff&quot;),&quot;Event Staff; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Events</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Human_Resources__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Benefits Admin&quot;),&quot;Benefits Admin; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Head of Talent Acquisition&quot;),&quot;Head of Talent Acquisition; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HR Assistant&quot;),&quot;HR Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HR Coordinator&quot;),&quot;HR Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HR Director&quot;),&quot;HR Director; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HR Generalist&quot;),&quot;HR Generalist; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HRIS Specialist&quot;),&quot;HRIS Specialist; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;HR Manager&quot;),&quot;HR Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Recruiter&quot;),&quot;Recruiter; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Recruiting Coordinator&quot;),&quot;Recruiting Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sourcer&quot;),&quot;Sourcer; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;VP of HR&quot;),&quot;VP of HR; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Human Resources</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_IT__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Database Admin&quot;),&quot;Database Admin; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Help Desk&quot;),&quot;Help Desk; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Network Admin&quot;),&quot;Network Admin; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Quality Assurance&quot;),&quot;Quality Assurance; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Tech Support&quot;),&quot;Tech Support; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - IT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Marketing_PR__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Copywriter&quot;),&quot;Copywriter; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Editor&quot;),&quot;Editor; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Assistant&quot;),&quot;Events Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Logistics Coordinator&quot;),&quot;Events Logistics Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Logistics Manager&quot;),&quot;Events Logistics Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Events Manager&quot;),&quot;Events Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Event Staff&quot;),&quot;Event Staff; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Graphic Designer&quot;),&quot;Graphic Designer; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Marketing Analyst&quot;),&quot;Marketing Analyst; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Marketing Associate&quot;),&quot;Marketing Associate; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Marketing Coordinator&quot;),&quot;Marketing Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Marketing Manager&quot;),&quot;Marketing Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Personal Assistant&quot;),&quot;Personal Assistant; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;PR Associate&quot;),&quot;PR Associate; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Product Manager&quot;),&quot;Product Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Product Marketing&quot;),&quot;Product Marketing; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Project Manager&quot;),&quot;Project Manager; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Marketing/PR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Operations__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Customer Service Manager&quot;),&quot;Customer Service Manager; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Customer Service Representative&quot;),&quot;Customer Service Representative; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Facilities Assistant&quot;),&quot;Facilities Assistant; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Facilities Manager&quot;),&quot;Facilities Manager; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Logistics Specialist&quot;),&quot;Logistics Specialist; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Operations Assistant&quot;),&quot;Operations Assistant; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Operations Manager&quot;),&quot;Operations Manager; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Product Marketing&quot;),&quot;Product Marketing; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Project Manager&quot;),&quot;Project Manager; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Operations Coordinator&quot;),&quot;Sales Operations Coordinator; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Operations Manager&quot;),&quot;Sales Operations Manager; &quot;,null)&amp; 




IF(INCLUDES(Candidate__r.Positions__c,&quot;Database Admin&quot;),&quot;Database Admin; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Help Desk&quot;),&quot;Help Desk; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Network Admin&quot;),&quot;Network Admin; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Quality Assurance&quot;),&quot;Quality Assurance; &quot;,null)&amp; 
IF(INCLUDES(Candidate__r.Positions__c,&quot;Tech Support&quot;),&quot;Tech Support; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Operations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Other_Description__c</fullName>
        <formula>Candidate__r.Positions_Other_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions: &quot;Other&quot; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_Sales__c</fullName>
        <formula>IF(INCLUDES(Candidate__r.Positions__c,&quot;Account Coordinator&quot;),&quot;Account Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Account Executive&quot;),&quot;Account Executive; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Account Manager&quot;),&quot;Account Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Business Development&quot;),&quot;Business Development; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Customer Success Manager&quot;),&quot;Customer Success)Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Lead Generation&quot;),&quot;Lead Generation; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Product Marketing&quot;),&quot;Product Marketing; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Project Manager&quot;),&quot;Project Manager; &quot;,null)&amp;



IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Development Representative&quot;),&quot;Sales Development Representative; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Director&quot;),&quot;Sales Director; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Manager&quot;),&quot;Sales Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Engineer&quot;),&quot;Sales Engineer; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Operations Coordinator&quot;),&quot;Sales Operations Coordinator; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Operations Manager&quot;),&quot;Sales Operations Manager; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;Sales Support&quot;),&quot;Sales Support; &quot;,null)&amp;
IF(INCLUDES(Candidate__r.Positions__c,&quot;VP of Sales&quot;),&quot;VP of Sales; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions - Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_RA_Notes__c</fullName>
        <label>Registration RA Notes</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason_Note__c</fullName>
        <label>Rejection Reason Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Wheelhouse</fullName>
                </value>
                <value>
                    <fullName>DNC</fullName>
                </value>
                <value>
                    <fullName>Reason 1</fullName>
                    <isActive>false</isActive>
                    <label>Reason 1</label>
                </value>
                <value>
                    <fullName>Reason 2</fullName>
                    <isActive>false</isActive>
                    <label>Reason 2</label>
                </value>
                <value>
                    <fullName>Reason 3</fullName>
                    <isActive>false</isActive>
                    <label>Reason 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resignation_Notice__c</fullName>
        <label>Resignation Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>one week</fullName>
                </value>
                <value>
                    <fullName>two weeks</fullName>
                </value>
                <value>
                    <fullName>three weeks</fullName>
                </value>
                <value>
                    <fullName>four weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Lead</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Passed On</fullName>
                    <isActive>false</isActive>
                    <label>Passed On</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                    <isActive>false</isActive>
                    <label>Reviewed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Other_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SI = Other Options?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Record_In_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SI Record In System?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_In_Progress__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( Time_Moved_To_In_Progress__c)),NOT(ISBLANK( Time_When_Accepted_Or_Rejected__c ))), 

TEXT( 
FLOOR( Time_When_Accepted_Or_Rejected__c - Time_Moved_To_In_Progress__c ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((Time_When_Accepted_Or_Rejected__c - Time_Moved_To_In_Progress__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((Time_When_Accepted_Or_Rejected__c - Time_Moved_To_In_Progress__c)*1440,60),0) 
) &amp;&quot; Minutes &quot; 

, &quot;&quot;)</formula>
        <inlineHelpText>The amount of time from when the candidate was moved to &quot;In Progress&quot; to a decision being made</inlineHelpText>
        <label>Time In Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Kept_In_Progress__c</fullName>
        <formula>NOW()-Time_Moved_To_In_Progress__c</formula>
        <label>Time Kept In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Moved_To_In_Progress__c</fullName>
        <label>Time Moved To In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_When_Accepted_Or_Rejected__c</fullName>
        <label>Time When Accepted Or Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_in_Queue_NEW__c</fullName>
        <formula>IF( ISPICKVAL(Review_Status__c, &quot;New Lead&quot;), (floor((NOW()-Created_Date_Time__c)*24))
+
(((((NOW()-Created_Date_Time__c)*24)-floor (ROUND((NOW()-Created_Date_Time__c),2)*24))*60)/60),


 (floor((Time_Moved_To_In_Progress__c-Created_Date_Time__c)*24))
+
(((((Time_Moved_To_In_Progress__c-Created_Date_Time__c)*24)-floor (ROUND((Time_Moved_To_In_Progress__c-Created_Date_Time__c),2)*24))*60)/60))</formula>
        <label>Time in Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Queue__c</fullName>
        <formula>IF(  ISPICKVAL(Review_Status__c, &quot;New Lead&quot;), 

TEXT( 
FLOOR( NOW() - CreatedDate ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - CreatedDate)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - CreatedDate)*1440,60),0) 
) &amp;&quot; Minutes &quot; 

, &quot;&quot;)</formula>
        <label>Time in Queue</label>
        <type>Text</type>
    </fields>
</CustomObject>